[gd_scene load_steps=11 format=3 uid="uid://dkp1yimttjnqb"]

[ext_resource type="Texture2D" uid="uid://c6wvb37afgkop" path="res://Cena Luta/fundoLuta.jpg" id="1_5t5ee"]
[ext_resource type="Script" uid="uid://c6bcko6xebpjt" path="res://Cena Luta/luta_floresta.gd" id="1_w1um7"]
[ext_resource type="PackedScene" uid="uid://rheff0g406ks" path="res://MagoFLoresta/magoFloresta.tscn" id="2_agi7y"]
[ext_resource type="Texture2D" uid="uid://cis7wljnmqud3" path="res://Lucio's Folder/Coracao/Hearts_Red_1.png" id="3_dq50k"]
[ext_resource type="Texture2D" uid="uid://c74ix2on05hkm" path="res://Lucio's Folder/Coracao/Hearts_Red_2.png" id="4_yei0j"]
[ext_resource type="Texture2D" uid="uid://qhlqirp70rpr" path="res://Lucio's Folder/Coracao/Hearts_Red_3.png" id="5_w1um7"]
[ext_resource type="Texture2D" uid="uid://cqahrcppeswea" path="res://Lucio's Folder/Coracao/Hearts_Red_4.png" id="6_tsmoc"]
[ext_resource type="Texture2D" uid="uid://cn6hwyaopu3e" path="res://Lucio's Folder/Coracao/Hearts_Red_5.png" id="7_ofi5u"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xdj3r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_5t5ee")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_bsi2o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dq50k")
}, {
"duration": 1.0,
"texture": ExtResource("4_yei0j")
}, {
"duration": 1.0,
"texture": ExtResource("5_w1um7")
}, {
"duration": 1.0,
"texture": ExtResource("6_tsmoc")
}, {
"duration": 1.0,
"texture": ExtResource("7_ofi5u")
}],
"loop": false,
"name": &"HIT",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dq50k")
}],
"loop": false,
"name": &"coracaoFull",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_ofi5u")
}],
"loop": false,
"name": &"coracaoZerado",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]
position = Vector2(568, 298)
script = ExtResource("1_w1um7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3.4999886, 1.5000167)
scale = Vector2(0.26796874, 0.2855153)
sprite_frames = SubResource("SpriteFrames_xdj3r")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="Control" type="Control" parent="Camera2D"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = -4.0
offset_right = 41.0
offset_bottom = 36.0

[node name="Label" type="Label" parent="Camera2D/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -0.82500005
anchor_right = 0.5
anchor_bottom = -0.82500005
offset_left = -77.0
offset_top = -34.0
offset_right = 44.0
offset_bottom = 1.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "Você ganhou!"
horizontal_alignment = 1

[node name="Voltar" type="Button" parent="Camera2D/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -61.0
offset_top = -13.0
offset_right = 19.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 9
text = "Resgatar prêmio"

[node name="MagoFloresta" parent="." instance=ExtResource("2_agi7y")]
position = Vector2(1.0000076, -4)
scale = Vector2(0.7, 0.777)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.5
offset_top = -81.0
offset_right = 144.5
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 137.0
offset_right = 66.0
offset_bottom = 161.0
theme_override_colors/font_color = Color(1, 1, 0, 1)

[node name="Button2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 225.0
offset_top = 138.0
offset_right = 271.0
offset_bottom = 162.0
theme_override_colors/font_color = Color(1, 1, 0, 1)

[node name="Button3" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
offset_left = 121.5
offset_top = 141.0
offset_right = 167.5
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)

[node name="Button4" type="Button" parent="Control"]
layout_mode = 0
offset_left = 173.0
offset_top = 138.0
offset_right = 219.0
offset_bottom = 162.0
theme_override_colors/font_color = Color(1, 1, 0, 1)

[node name="Button5" type="Button" parent="Control"]
layout_mode = 0
offset_left = 72.0
offset_top = 138.0
offset_right = 118.0
offset_bottom = 162.0
theme_override_colors/font_color = Color(1, 1, 0, 1)

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -12.5
offset_right = 12.5
offset_bottom = 14.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0.20392157, 0.36078432, 0.3019608, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 9
text = "teste"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(610.5, 218)
scale = Vector2(1.21875, 1.1874999)
sprite_frames = SubResource("SpriteFrames_bsi2o")
animation = &"HIT"
autoplay = "coracaoFull"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(645.50006, 218)
scale = Vector2(1.21875, 1.1874999)
sprite_frames = SubResource("SpriteFrames_bsi2o")
animation = &"HIT"
autoplay = "coracaoFull"

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(683.5, 218)
scale = Vector2(1.21875, 1.1874999)
sprite_frames = SubResource("SpriteFrames_bsi2o")
animation = &"HIT"
autoplay = "coracaoFull"

[connection signal="pressed" from="Camera2D/Control/Voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Control/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Control/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Control/Button5" to="." method="_on_button_5_pressed"]
